# pico-hsm-rs

./: .gitignore  Cargo.toml  README.md  sonar-project.properties
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
crates/atecc608b/: Cargo.toml  README-ATECC608B.md
crates/atecc608b/src/: crc.rs  driver.rs  error.rs  hal.rs  lib.rs  opcodes.rs  packet.rs  slot.rs  wake.rs
crates/atecc608b/src/command/: checkmac.rs  counter.rs  gendig.rs  genkey.rs  info.rs  lock.rs  mod.rs  nonce.rs  privwrite.rs  random.rs  read_write.rs  sign.rs  verify.rs
crates/atecc608b/tests/: crc_vectors.rs  integration_checkmac.rs  integration_counter.rs  integration_gendig  integration_gendig.rs  integration_genkey.rs  integration_info.rs  integration_nonce.rs  integration_pivwrite.rs  integration_privwrite.rs  integration_sign.rs  integration_verify.rs  integration_write.rs  mock_hal.rs
crates/atecc608b/tests/common/: mod.rs
crates/hsm-crypto-service/: Cargo.toml
crates/hsm-crypto-service/src/: encrypted_write.rs  error.rs  lib.rs  pin.rs  service.rs  session.rs  slots.rs
crates/hsm-firmware/: Cargo.toml  build.rs  memory.x
crates/hsm-firmware-logic/: Cargo.toml
crates/hsm-firmware-logic/src/: io.rs  lib.rs  state_machine.rs
crates/hsm-firmware/src/: animation.rs  channels.rs  hal_rp2040.rs  io.rs  main.rs  state.rs  state_machine.rs  tasks.rs  touch.rs  usb.rs
crates/hsm-usb-protocol/: Cargo.toml
crates/hsm-usb-protocol/src/: commands.rs  frame.rs  hid_descriptor.rs  lib.rs  responses.rs
crates/hsm-usb-protocol/tests/: round_trip.rs
doc-extras/: index.html
docs/: architecture.md  bring-up-procedure.md  checkmac-validation.md  config-zone-layout.md  usb-hid-protocol.md
tools/: compute_lock_crc.py  verify_sign_tool.py
tools/config-generator/: Cargo.toml
tools/config-generator/src/: annotate.rs  blob.rs  counter_encoding.rs  crc.rs  main.rs
tools/hsm-host/: Cargo.toml
tools/hsm-host/src/: device.rs  main.rs
