[package]
name        = "atecc608b"
description = "no_std async driver for the Microchip ATECC608B crypto authentication device."
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = ["embedded-hal-async", "crypto", "atecc608b", "no_std", "hardware"]
categories  = ["embedded", "cryptography", "no-std"]
readme      = "README-ATECC608B.md"

[features]
default        = []
# Enable defmt-formatted debug output of internal driver states. Off by default
# because the consumer (firmware crate) decides whether defmt is wired up.
defmt          = ["dep:defmt"]
# Compiled-in unit tests use a mock HAL. This feature is only relevant for
# host-side testing.
mock-hal       = []

[dependencies]
# defmt is optional so the crate stays pure.
defmt              = { workspace = true, optional = true }

[dev-dependencies]
# Mock HAL implementation lives in tests/, no extra deps needed at this point.
