[package]
name        = "hsm-crypto-service"
description = "Business-logic layer between the ATECC608B driver and the USB protocol."
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }

[features]
default = []
defmt   = ["dep:defmt", "atecc608b/defmt"]

[dependencies]
atecc608b = { path = "../atecc608b" }
p256      = { workspace = true }
sha2      = { workspace = true }
heapless  = { workspace = true }

defmt     = { workspace = true, optional = true }
