[package]
name        = "hsm-firmware-logic"
description = "Host-testable logic for the mini-HSM firmware: state machine and I/O abstractions."
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }


[features]
default = []
defmt   = ["dep:defmt"]

[dependencies]
defmt = { workspace = true, optional = true }