[package]
name        = "hsm-firmware"
version     = "0.1.0"
edition     = "2024"
description = "Firmware binary for the mini-HSM dongle (RP2040)."

[[bin]]
name = "hsm-firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
atecc608b         = { path = "../atecc608b",        features = ["defmt"] }
hsm-crypto-service= { path = "../hsm-crypto-service", features = ["defmt"] }
hsm-usb-protocol  = { path = "../hsm-usb-protocol", features = ["defmt"] }

embassy-executor  = { workspace = true, features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time      = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync      = { workspace = true, features = ["defmt"] }
embassy-futures   = { workspace = true }
embassy-rp        = { workspace = true, features = ["rp2040", "rt", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "rom-func-cache"] }
embassy-usb       = { workspace = true, features = ["defmt"] }

usbd-hid          = { workspace = true, features = ["defmt"] }

cortex-m          = { workspace = true }
cortex-m-rt       = { workspace = true }
heapless          = { workspace = true }

defmt             = { workspace = true }
defmt-rtt         = { workspace = true }
panic-probe       = { workspace = true }
