[package]
name        = "hsm-usb-protocol"
description = "USB-HID protocol for the mini-HSM, shared by firmware and host."
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }

[features]
default = []
# When building for the host CLI, the protocol crate may use std for error
# messages and serialization helpers.
std     = []
defmt   = ["dep:defmt"]

[dependencies]
heapless  = { workspace = true }
defmt     = { workspace = true, optional = true }
