[package]
name        = "config-generator"
description = "Emit the 128-byte ATECC608B config zone blob for the mini-HSM."
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }
hex    = { workspace = true }
