[package]
name        = "hsm-host"
description = "Host-side CLI to talk to the mini-HSM dongle over USB-HID."
version     = { workspace = true }
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }

[dependencies]
hsm-usb-protocol = { path = "../../crates/hsm-usb-protocol", features = ["std"] }
hidapi           = { workspace = true }
clap             = { workspace = true }
anyhow           = { workspace = true }
hex              = { workspace = true }
